--- a/application/modules/default/views/scripts/index/index.phtml
+++ b/application/modules/default/views/scripts/index/index.phtml
@@ -47,10 +47,10 @@ $(document).ready(function(){
                 <div class="inner">
                   <h1>Закажите услугу</h1>
                   <h3 class="price ">
-                      Прямо сейчас
+                      Мы быстро найдем исполнителя для Вашего задания
                   </h3>
                   
-                  <a data-toggle="modal"  data-dismiss="modal" href="#ModalLogin"class="btn btn-primary btn-lg">
+                  <a data-toggle="modal"  data-dismiss="modal" href="#ModalSignup"class="btn btn-primary btn-lg">
                       Заказать услугу
                       <span class="arrowUnicode">►</span>
                   </a> 
@@ -102,7 +102,7 @@ $(document).ready(function(){
              <div class="quickview">
               
              </div>
-                <a href="#" data-toggle="modal" data-target="#ModalLogin"  >
+                <a href="<?= $this->baseUrl().'/tasks/view/id/'.$lastTask['id'] ?>" >
                  <?php if($lastTask['task_image']){?>   
                     <img src="<?= $this->baseUrl().'/images/task_images/'.$lastTask['task_image'] ?>" alt="img" class="img-responsive">
                  <?php }else{ ?>
@@ -112,12 +112,12 @@ $(document).ready(function(){
 <!--              <div class="promotion"> <span class="new-product"> NEW</span> </div>-->
             </div>
             <div class="description">
-              <h4><a href="#" data-toggle="modal" data-target="#ModalLogin" ><?= $lastTask['title'] ?></a></h4>
+              <h4><a href="<?= $this->baseUrl().'/tasks/view/id/'.$lastTask['id'] ?>" ><?= $lastTask['title'] ?></a></h4>
               <p><?= $lastTask['description']?> </p>
 <!--              <span class="size">XL / XXL / S </span> -->
             </div>
-            <div class="price"> <span><?= $lastTask['price'] ?> .руб</span> </div>
-            <div class="action-control"> <a class="btn btn-primary" data-toggle="modal" data-target="#ModalLogin" > <span class="add2cart"> Подробнее </span> </a> </div>
+            <div class="price"> <span><?= $lastTask['price'] ?> бел. рублей</span> </div>
+            <div class="action-control"> <a class="btn btn-primary" href="<?= $this->baseUrl().'/tasks/view/id/'.$lastTask['id'] ?>"> <span class="add2cart"> Подробнее </span> </a> </div>
           </div>
         </div>
        <?php }?>
