--- a/application/modules/default/views/scripts/performers/view.phtml
+++ b/application/modules/default/views/scripts/performers/view.phtml
@@ -3,7 +3,7 @@
     <div class="breadcrumbDiv col-lg-12">
       <ul class="breadcrumb">
           <li> <a href="<?= $this->baseUrl().'/' ?>">Главная</a> </li>
-          <li> <a href="<?= $this->baseUrl().'/default/performers/' ?>">Исполнитель</a> </li>
+          <li> <a href="<?= $this->baseUrl().'/default/performers/' ?>">Список исполнителей</a> </li>
         <li class="active"><?= $this->performer['username'].' '.mb_substr($this->performer['surname'],0,1,'utf-8') ?> </li>
       </ul>
     </div>
@@ -222,7 +222,7 @@
                 <img class="img-thumbnail" width="100%" src="<?= $this->baseUrl().'/images/users_images/'.$feedback['u_image'] ?>">
             </div>
             <div class="col-lg-7"> 
-                <h2><?=  $feedback['u_username']?></h2>
+                <h2><?=  $feedback['u_username'].' '.mb_substr($feedback['u_surname'], 0, 1, 'utf-8').'.'?></h2>
                     <p><?= $feedback['text'] ?></p>
                     <h3 class="product-code"><?= date("d.m.Y",$feedback['created']); ?></h3>
             </div>
