--- a/application/modules/performer/views/scripts/task/performers-view.phtml
+++ b/application/modules/performer/views/scripts/task/performers-view.phtml
@@ -91,8 +91,8 @@
         </div>
 
         <div class="col-lg-12">
-           <label>Предложенная стоимость : </label>
-           <?= $this->task['customers_price'] ?> рублей
+           <label>Стоимость : </label>
+           <?= $this->task['customers_price'] ?> бел. рублей
         </div>
         <?php if($this->tasksFeedback){?>
 
@@ -108,52 +108,52 @@
                         <span class="selected-color"><strong>Оценка</strong></span>
                         <ul class="swatches Color">
                             <?php switch ($this->tasksFeedback['rating']){
-                                case 1:?>
-                              <li> <a style="background-color:#f1f40e"> </a> </li>
-                              <li > <a style="background-color:#adadad"> </a> </li>
-                              <li > <a style="background-color:#adadad"> </a> </li>
-                              <li > <a style="background-color:#adadad"> </a> </li>
-                              <li > <a style="background-color:#adadad"> </a> </li>
-                            <?php break;
-                                case 2:
-                        ?>
-                              <li> <a style="background-color:#f1f40e"> </a> </li>
-                              <li> <a style="background-color:#f1f40e"> </a> </li>
-                              <li > <a style="background-color:#adadad"> </a> </li>
-                              <li > <a style="background-color:#adadad"> </a> </li>
-                              <li > <a style="background-color:#adadad"> </a> </li>
-                          <?php
-                          break;
-                          case 3: ?>  
-                              <li> <a style="background-color:#f1f40e"> </a> </li>
-                              <li> <a style="background-color:#f1f40e"> </a> </li>
-                              <li> <a style="background-color:#f1f40e"> </a> </li>
-                              <li > <a style="background-color:#adadad"> </a> </li>
-                              <li > <a style="background-color:#adadad"> </a> </li>
-                          <?php break;
-                                case 4:
-                      ?>      <li> <a style="background-color:#f1f40e"> </a> </li>
-                              <li> <a style="background-color:#f1f40e"> </a> </li>
-                              <li> <a style="background-color:#f1f40e"> </a> </li>
-                              <li> <a style="background-color:#f1f40e"> </a> </li>
-                              <li > <a style="background-color:#adadad"> </a> </li>
-                            <?php break;
-                                case 5:
-                      ?>      <li> <a style="background-color:#f1f40e"> </a> </li>
-                              <li> <a style="background-color:#f1f40e"> </a> </li>
-                              <li> <a style="background-color:#f1f40e"> </a> </li>
-                              <li> <a style="background-color:#f1f40e"> </a> </li>
-                              <li> <a style="background-color:#f1f40e"> </a> </li>
-                            <?php 
-                            break;
-                            default: ?>
-                            <li > <a style="background-color:#adadad"> </a> </li>
-                            <li > <a style="background-color:#adadad"> </a> </li>
-                            <li > <a style="background-color:#adadad"> </a> </li>
-                            <li > <a style="background-color:#adadad"> </a> </li>
-                            <li > <a style="background-color:#adadad"> </a> </li>
-                            <?php }?>
-                                          </ul>
+              case 1:?>
+            <li> <img src="<?= $this->baseUrl().'/images/pos_star.png' ?>" height="27"> </li>
+            <li > <img src="<?= $this->baseUrl().'/images/neg_star.png' ?>" height="27"> </li>
+            <li > <img src="<?= $this->baseUrl().'/images/neg_star.png' ?>" height="27"> </li>
+            <li > <img src="<?= $this->baseUrl().'/images/neg_star.png' ?>" height="27"> </li>
+            <li > <img src="<?= $this->baseUrl().'/images/neg_star.png' ?>" height="27"> </li>
+          <?php break;
+              case 2:
+      ?>
+            <li> <img src="<?= $this->baseUrl().'/images/pos_star.png' ?>" height="27"> </li>
+            <li> <img src="<?= $this->baseUrl().'/images/pos_star.png' ?>" height="27"> </li>
+            <li > <img src="<?= $this->baseUrl().'/images/neg_star.png' ?>" height="27"> </li>
+            <li > <img src="<?= $this->baseUrl().'/images/neg_star.png' ?>" height="27"> </li>
+            <li > <img src="<?= $this->baseUrl().'/images/neg_star.png' ?>" height="27"> </li>
+        <?php
+        break;
+        case 3: ?>  
+            <li> <img src="<?= $this->baseUrl().'/images/pos_star.png' ?>" height="27"> </li>
+            <li> <img src="<?= $this->baseUrl().'/images/pos_star.png' ?>" height="27"> </li>
+            <li> <img src="<?= $this->baseUrl().'/images/pos_star.png' ?>" height="27"> </li>
+            <li > <img src="<?= $this->baseUrl().'/images/neg_star.png' ?>" height="27"> </li>
+            <li > <img src="<?= $this->baseUrl().'/images/neg_star.png' ?>" height="27"> </li>
+        <?php break;
+              case 4:
+    ?>      <li> <img src="<?= $this->baseUrl().'/images/pos_star.png' ?>" height="27"> </li>
+            <li> <img src="<?= $this->baseUrl().'/images/pos_star.png' ?>" height="27"> </li>
+            <li> <img src="<?= $this->baseUrl().'/images/pos_star.png' ?>" height="27"> </li>
+            <li> <img src="<?= $this->baseUrl().'/images/pos_star.png' ?>" height="27"> </li>
+            <li> <img src="<?= $this->baseUrl().'/images/neg_star.png' ?>" height="27"> </li>
+          <?php break;
+              case 5:
+    ?>      <li> <img src="<?= $this->baseUrl().'/images/pos_star.png' ?>" height="27"> </li>
+            <li> <img src="<?= $this->baseUrl().'/images/pos_star.png' ?>" height="27"> </li>
+            <li> <img src="<?= $this->baseUrl().'/images/pos_star.png' ?>" height="27"> </li>
+            <li> <img src="<?= $this->baseUrl().'/images/pos_star.png' ?>" height="27"> </li>
+             <li> <img src="<?= $this->baseUrl().'/images/pos_star.png' ?>" height="27"> </li>
+          <?php 
+          break;
+          default: ?>
+          <li > <img src="<?= $this->baseUrl().'/images/neg_star.png' ?>" height="27"> </li>
+          <li > <img src="<?= $this->baseUrl().'/images/neg_star.png' ?>" height="27"> </li>
+          <li > <img src="<?= $this->baseUrl().'/images/neg_star.png' ?>" height="27"> </li>
+          <li > <img src="<?= $this->baseUrl().'/images/neg_star.png' ?>" height="27"> </li>
+          <li > <img src="<?= $this->baseUrl().'/images/neg_star.png' ?>" height="27"> </li>
+          <?php }?>
+        </ul>
                                   <?php } ?>
 
             </div>
@@ -274,7 +274,55 @@
                     <a href="<?= $this->baseUrl()."/performer/performers/performer-view/id/".$preposition['performer_id'] ?>"><?= $preposition['u_username'].' '.mb_substr($preposition['u_surname'], 0, 1,'utf-8').'.' ?></a>
                 </td>
                 <td>
-                    <?= $preposition['rating'] ?>
+                   
+          <ul class="swatches Color">
+          <?php switch ($preposition['rating']){
+              case 1:?>
+            <li> <img src="<?= $this->baseUrl().'/images/pos_star.png' ?>" height="27"> </li>
+            <li > <img src="<?= $this->baseUrl().'/images/neg_star.png' ?>" height="27"> </li>
+            <li > <img src="<?= $this->baseUrl().'/images/neg_star.png' ?>" height="27"> </li>
+            <li > <img src="<?= $this->baseUrl().'/images/neg_star.png' ?>" height="27"> </li>
+            <li > <img src="<?= $this->baseUrl().'/images/neg_star.png' ?>" height="27"> </li>
+          <?php break;
+              case 2:
+      ?>
+            <li> <img src="<?= $this->baseUrl().'/images/pos_star.png' ?>" height="27"> </li>
+            <li> <img src="<?= $this->baseUrl().'/images/pos_star.png' ?>" height="27"> </li>
+            <li > <img src="<?= $this->baseUrl().'/images/neg_star.png' ?>" height="27"> </li>
+            <li > <img src="<?= $this->baseUrl().'/images/neg_star.png' ?>" height="27"> </li>
+            <li > <img src="<?= $this->baseUrl().'/images/neg_star.png' ?>" height="27"> </li>
+        <?php
+        break;
+        case 3: ?>  
+            <li> <img src="<?= $this->baseUrl().'/images/pos_star.png' ?>" height="27"> </li>
+            <li> <img src="<?= $this->baseUrl().'/images/pos_star.png' ?>" height="27"> </li>
+            <li> <img src="<?= $this->baseUrl().'/images/pos_star.png' ?>" height="27"> </li>
+            <li > <img src="<?= $this->baseUrl().'/images/neg_star.png' ?>" height="27"> </li>
+            <li > <img src="<?= $this->baseUrl().'/images/neg_star.png' ?>" height="27"> </li>
+        <?php break;
+              case 4:
+    ?>      <li> <img src="<?= $this->baseUrl().'/images/pos_star.png' ?>" height="27"> </li>
+            <li> <img src="<?= $this->baseUrl().'/images/pos_star.png' ?>" height="27"> </li>
+            <li> <img src="<?= $this->baseUrl().'/images/pos_star.png' ?>" height="27"> </li>
+            <li> <img src="<?= $this->baseUrl().'/images/pos_star.png' ?>" height="27"> </li>
+            <li> <img src="<?= $this->baseUrl().'/images/neg_star.png' ?>" height="27"> </li>
+          <?php break;
+              case 5:
+    ?>      <li> <img src="<?= $this->baseUrl().'/images/pos_star.png' ?>" height="27"> </li>
+            <li> <img src="<?= $this->baseUrl().'/images/pos_star.png' ?>" height="27"> </li>
+            <li> <img src="<?= $this->baseUrl().'/images/pos_star.png' ?>" height="27"> </li>
+            <li> <img src="<?= $this->baseUrl().'/images/pos_star.png' ?>" height="27"> </li>
+             <li> <img src="<?= $this->baseUrl().'/images/pos_star.png' ?>" height="27"> </li>
+          <?php 
+          break;
+          default: ?>
+          <li > <img src="<?= $this->baseUrl().'/images/neg_star.png' ?>" height="27"> </li>
+          <li > <img src="<?= $this->baseUrl().'/images/neg_star.png' ?>" height="27"> </li>
+          <li > <img src="<?= $this->baseUrl().'/images/neg_star.png' ?>" height="27"> </li>
+          <li > <img src="<?= $this->baseUrl().'/images/neg_star.png' ?>" height="27"> </li>
+          <li > <img src="<?= $this->baseUrl().'/images/neg_star.png' ?>" height="27"> </li>
+          <?php }?>
+        </ul>
                 </td>
                 <td>
                     <?php if($preposition['performers_price']){?>
