--- a/application/modules/customer/views/scripts/task/new-task.phtml
+++ b/application/modules/customer/views/scripts/task/new-task.phtml
@@ -34,6 +34,7 @@
         </div>
         <div class="col-lg-12">
             <form method="POST" id="task_form" class="form-inline" enctype="multipart/form-data" action="<?= $this->baseUrl() ?>/customer/task/add-task/">
+                <div class="row">
                 <div class="col-sm-4">
                     <label  for="cat">Категория</label>
                     <select class="form-control" onchange="getSubCats()" id="cat" style="width: 100%">
@@ -58,11 +59,15 @@
                     <input name="title" type="text" id="title" class="form-control" style="width: 100%">
                     <p id="title_error" class="text-danger" style="display: none">* Поле не может быть пустым</p>
                 </div>
+                </div>
+                <div class="row">
                 <div class="col-sm-12">
                     <label>Описание</label>
                     <textarea name="description" id="description" style="width: 100%" rows="10" class="form-control"></textarea>
                     <p id="description_error" class="text-danger" style="display: none">* Поле не может быть пустым</p>
                 </div>
+                </div>
+                <div class="row">
                 <div class="col-sm-4">
                     <label>Стоимость</label>
                     <input type="text" name="price" id="price" class="form-control" style="width: 100%">
@@ -72,6 +77,7 @@
                     <label>Дата выполнения</label>
                     <input type="text" name="final_date" id="final_date" class="form-control" style="width: 100%">
                     <p id="final_date_error" class="text-danger" style="display: none">* Поле не может быть пустым</p>
+                    <p id="price_char_error" class="text-danger" style="display: none">* Поле не должно содержать пробелов, точек и запятых</p>
                 </div>
                 <div class="col-sm-2">
                     <label>Время выполнения</label>
@@ -111,8 +117,8 @@
                        <label >Номер телефона</label></br>
                        <div class="input-group">
                          <div class="input-group-addon">+375</div>
-                         <input type="text" class="form-control" id="phonenumberInp" value="<?= mb_substr($this->user['phonenumber'], 3, 10,'utf-8')?>"  placeholder="телефон">
-                         <div id="sendSmsButton" style="display: none; background-color:#4ec67f" class="input-group-addon btn">Верификация</div>
+                         <input type="text" class="form-control" id="phonenumberInp" <?php if($this->user['phonenumber']){?>value="<?= mb_substr($this->user['phonenumber'], 3, 10,'utf-8')?>" <?php } ?>  placeholder="телефон">
+                         <div id="sendSmsButton" style="display: none; background-color:#4ec67f" class="input-group-addon btn">Выслать код</div>
                        </div>
                        <p class="text-danger" id="phoneErrorTaken" style="display: none">Номер занят</p>
                      </div>
@@ -138,24 +144,28 @@
                         </div>
                     <?php } ?>
                 </div>
+                </div>
                 
-                   <div class="col-sm-12"> 
-                <div class="col-sm-4">
+                   <div class="row"> 
+                <div class="col-sm-8 bg-info additionalBlockTask"> 
+                    <label class="col-sm-12" style="text-align: center; text-decoration: underline">Дополнительная информация</label>
+                <div class="col-sm-6">
                     <div id="mainImgDiv">
                     <label>Изображение</label>
-                    <input type="file" name="image" class="form-control" style="width: 100%">
+                    <input type="file" name="image" class="form-control45" style="width: 100%">
                     </div>
                     
-                    <a onclick="addInput()">+ Добавить изображение</a>
+<!--                    <a onclick="addInput()">+ Добавить изображение</a>-->
                 </div>
                 <input type="hidden" value="0" name="docs" style="display: none">
-                <div class="col-sm-4">
-                    <label>Наличие документов</label></br>
+                <div class="col-sm-6">
+                    <label >Наличие документов</label></br>
                     
                         <span>
-                        <input type="checkbox" name="docs" value="1" id="docs" class="form-control" >
+                        <input type="checkbox" name="docs" value="1" id="docs" class="form-control45" >
                         Исполнитель должен иметь при себе документы для оформления расписки</span>
                     
+                </div>
                 </div>
                 <input type="hidden" name="agree"  value="0">
                 <div class="col-sm-4">
@@ -398,6 +408,9 @@ Webmoney — webmoney.ru.
 <script>
 
 $(document).ready(function(){
+  $(function() {
+    $( "#final_date" ).datepicker();
+  }); 
     $('#submitTask').bind("click", function(){
         newTask();
     });
@@ -409,11 +422,13 @@ $(document).ready(function(){
     });
     
     var phonenumber = $('#phonenumberInp').val();
-    var numberLng = phonenumber.length;
-    if(numberLng == 9){
-        $('#sendSmsButton').show();
-    }else{
-       $('#sendSmsButton').hide(); 
+    if(phonenumber){
+        var numberLng = phonenumber.length;
+        if(numberLng == 9){
+            $('#sendSmsButton').show();
+        }else{
+           $('#sendSmsButton').hide(); 
+        }
     }
     $('#smsCode').bind('keyup', function(){
         var codeLng = $('#smsCode').val().length;
@@ -597,6 +612,7 @@ function newTask(){
     $('#description_error').hide(); 
     $('#date_error').hide();
     $('#agree_error').hide(); 
+    $('#price_char_error').hide(); 
     
     var catId = $('#sub_cat :selected').val();
     var title = $('#title').val();
@@ -608,8 +624,9 @@ function newTask(){
     }else{
         var agree = '0';
     }
-var priceNan = isNaN(price);
- if(catId === '0' || title === '' || price === '' || date === '' || description === '' || agree === '0' || priceNan){
+    var priceNan = isNaN(price);
+    var priceDot = price.indexOf(".");
+ if(catId === '0' || title === '' || price === '' || date === '' || description === '' || agree === '0' || priceNan || priceDot != -1){
 //    if( title === '' || price === '' || date === '' || finishDate === '' || agree === '0'){
         if(catId === '0'){
             $('#sub_cat_error').show();
@@ -629,9 +646,10 @@ var priceNan = isNaN(price);
         if(description === ''){
            $('#description_error').show(); 
         }
-        if(finishDate === ''){
-           $('#expiry_date_error').show(); 
+        if(priceDot != -1){
+           $('#price_char_error').show(); 
         }
+
         if(agree === '0'){
            $('#agree_error').show(); 
         }
