--- a/application/modules/customer/views/scripts/task/view.phtml
+++ b/application/modules/customer/views/scripts/task/view.phtml
@@ -120,17 +120,32 @@ if (hs.addSlideshow) hs.addSlideshow({
                 Описание 
               </h3>
         </div>   
+        
         <div class="col-lg-12">
-           <?= $this->task['description'] ?>
+            <label>Категория : </label>
+           <?= $this->task['c_title'] ?>
         </div>
+        <div class="col-lg-12">
+            <label>Документы для оформления расписки : </label>
+           <?php if($this->task['docs'] == 1){?>
+                 требуются
+           <?php }else{?>
+                 не требуются
+           <?php }?> 
+        </div>
+        
         <div class="col-lg-12">
            <label>Дата исполнения : </label>
            <?= date("h:00 d.m.Y",$this->task['final_date']) ?>
         </div>
 
         <div class="col-lg-12">
-           <label>Предложенная стоимость : </label>
-           <?= $this->task['customers_price'] ?> рублей
+           <label>Стоимость : </label>
+           <?= $this->task['customers_price'] ?> бел. рублей
+        </div>
+        <div class="col-lg-12">
+            <label>Описание : </label>
+           <?= $this->task['description'] ?>
         </div>
         <?php if($this->tasksFeedback){?>
 
@@ -144,54 +159,54 @@ if (hs.addSlideshow) hs.addSlideshow({
                 <?php }else{?>
                         <p class="text-success">Положительный</p>
                         <span class="selected-color"><strong>Оценка</strong></span>
-                         <ul class="swatches Color">
-          <?php switch ($this->taskFeedback['rating']){
-              case 1:?>
-            <li> <img src="<?= $this->baseUrl().'/images/pos_star.png' ?>" height="37"> </li>
-            <li > <img src="<?= $this->baseUrl().'/images/neg_star.png' ?>" height="37"> </li>
-            <li > <img src="<?= $this->baseUrl().'/images/neg_star.png' ?>" height="37"> </li>
-            <li > <img src="<?= $this->baseUrl().'/images/neg_star.png' ?>" height="37"> </li>
-            <li > <img src="<?= $this->baseUrl().'/images/neg_star.png' ?>" height="37"> </li>
-          <?php break;
-              case 2:
-      ?>
-            <li> <img src="<?= $this->baseUrl().'/images/pos_star.png' ?>" height="37"> </li>
-            <li> <img src="<?= $this->baseUrl().'/images/pos_star.png' ?>" height="37"> </li>
-            <li > <img src="<?= $this->baseUrl().'/images/neg_star.png' ?>" height="37"> </li>
-            <li > <img src="<?= $this->baseUrl().'/images/neg_star.png' ?>" height="37"> </li>
-            <li > <img src="<?= $this->baseUrl().'/images/neg_star.png' ?>" height="37"> </li>
-        <?php
-        break;
-        case 3: ?>  
-            <li> <img src="<?= $this->baseUrl().'/images/pos_star.png' ?>" height="37"> </li>
-            <li> <img src="<?= $this->baseUrl().'/images/pos_star.png' ?>" height="37"> </li>
-            <li> <img src="<?= $this->baseUrl().'/images/pos_star.png' ?>" height="37"> </li>
-            <li > <img src="<?= $this->baseUrl().'/images/neg_star.png' ?>" height="37"> </li>
-            <li > <img src="<?= $this->baseUrl().'/images/neg_star.png' ?>" height="37"> </li>
-        <?php break;
-              case 4:
-    ?>      <li> <img src="<?= $this->baseUrl().'/images/pos_star.png' ?>" height="37"> </li>
-            <li> <img src="<?= $this->baseUrl().'/images/pos_star.png' ?>" height="37"> </li>
-            <li> <img src="<?= $this->baseUrl().'/images/pos_star.png' ?>" height="37"> </li>
-            <li> <img src="<?= $this->baseUrl().'/images/pos_star.png' ?>" height="37"> </li>
-            <li> <img src="<?= $this->baseUrl().'/images/neg_star.png' ?>" height="37"> </li>
-          <?php break;
-              case 5:
-    ?>      <li> <img src="<?= $this->baseUrl().'/images/pos_star.png' ?>" height="37"> </li>
-            <li> <img src="<?= $this->baseUrl().'/images/pos_star.png' ?>" height="37"> </li>
-            <li> <img src="<?= $this->baseUrl().'/images/pos_star.png' ?>" height="37"> </li>
-            <li> <img src="<?= $this->baseUrl().'/images/pos_star.png' ?>" height="37"> </li>
-             <li> <img src="<?= $this->baseUrl().'/images/pos_star.png' ?>" height="37"> </li>
-          <?php 
-          break;
-          default: ?>
-          <li > <img src="<?= $this->baseUrl().'/images/neg_star.png' ?>" height="37"> </li>
-          <li > <img src="<?= $this->baseUrl().'/images/neg_star.png' ?>" height="37"> </li>
-          <li > <img src="<?= $this->baseUrl().'/images/neg_star.png' ?>" height="37"> </li>
-          <li > <img src="<?= $this->baseUrl().'/images/neg_star.png' ?>" height="37"> </li>
-          <li > <img src="<?= $this->baseUrl().'/images/neg_star.png' ?>" height="37"> </li>
-          <?php }?>
-        </ul>
+                        <ul class="swatches Color">
+                    <?php switch ($this->tasksFeedback['rating']){
+                        case 1:?>
+                      <li> <img src="<?= $this->baseUrl().'/images/pos_star.png' ?>" height="27"> </li>
+                      <li > <img src="<?= $this->baseUrl().'/images/neg_star.png' ?>" height="27"> </li>
+                      <li > <img src="<?= $this->baseUrl().'/images/neg_star.png' ?>" height="27"> </li>
+                      <li > <img src="<?= $this->baseUrl().'/images/neg_star.png' ?>" height="27"> </li>
+                      <li > <img src="<?= $this->baseUrl().'/images/neg_star.png' ?>" height="27"> </li>
+                    <?php break;
+                        case 2:
+                ?>
+                      <li> <img src="<?= $this->baseUrl().'/images/pos_star.png' ?>" height="27"> </li>
+                      <li> <img src="<?= $this->baseUrl().'/images/pos_star.png' ?>" height="27"> </li>
+                      <li > <img src="<?= $this->baseUrl().'/images/neg_star.png' ?>" height="27"> </li>
+                      <li > <img src="<?= $this->baseUrl().'/images/neg_star.png' ?>" height="27"> </li>
+                      <li > <img src="<?= $this->baseUrl().'/images/neg_star.png' ?>" height="27"> </li>
+                  <?php
+                  break;
+                  case 3: ?>  
+                      <li> <img src="<?= $this->baseUrl().'/images/pos_star.png' ?>" height="27"> </li>
+                      <li> <img src="<?= $this->baseUrl().'/images/pos_star.png' ?>" height="27"> </li>
+                      <li> <img src="<?= $this->baseUrl().'/images/pos_star.png' ?>" height="27"> </li>
+                      <li > <img src="<?= $this->baseUrl().'/images/neg_star.png' ?>" height="27"> </li>
+                      <li > <img src="<?= $this->baseUrl().'/images/neg_star.png' ?>" height="27"> </li>
+                  <?php break;
+                        case 4:
+              ?>      <li> <img src="<?= $this->baseUrl().'/images/pos_star.png' ?>" height="27"> </li>
+                      <li> <img src="<?= $this->baseUrl().'/images/pos_star.png' ?>" height="27"> </li>
+                      <li> <img src="<?= $this->baseUrl().'/images/pos_star.png' ?>" height="27"> </li>
+                      <li> <img src="<?= $this->baseUrl().'/images/pos_star.png' ?>" height="27"> </li>
+                      <li> <img src="<?= $this->baseUrl().'/images/neg_star.png' ?>" height="27"> </li>
+                    <?php break;
+                        case 5:
+              ?>      <li> <img src="<?= $this->baseUrl().'/images/pos_star.png' ?>" height="27"> </li>
+                      <li> <img src="<?= $this->baseUrl().'/images/pos_star.png' ?>" height="27"> </li>
+                      <li> <img src="<?= $this->baseUrl().'/images/pos_star.png' ?>" height="27"> </li>
+                      <li> <img src="<?= $this->baseUrl().'/images/pos_star.png' ?>" height="27"> </li>
+                       <li> <img src="<?= $this->baseUrl().'/images/pos_star.png' ?>" height="27"> </li>
+                    <?php 
+                    break;
+                    default: ?>
+                    <li > <img src="<?= $this->baseUrl().'/images/neg_star.png' ?>" height="27"> </li>
+                    <li > <img src="<?= $this->baseUrl().'/images/neg_star.png' ?>" height="27"> </li>
+                    <li > <img src="<?= $this->baseUrl().'/images/neg_star.png' ?>" height="27"> </li>
+                    <li > <img src="<?= $this->baseUrl().'/images/neg_star.png' ?>" height="27"> </li>
+                    <li > <img src="<?= $this->baseUrl().'/images/neg_star.png' ?>" height="27"> </li>
+                        <?php } ?>
+                  </ul>
                                   <?php } ?>
 
             </div>
