--- a/application/modules/default/views/scripts/layout.phtml
+++ b/application/modules/default/views/scripts/layout.phtml
@@ -190,7 +190,7 @@ document.getElementById('pagestyle').setAttribute('href', sheet);
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-hidden="true"> &times; </button>
-        <h3 class="modal-title-site text-center" > Авторизация </h3>
+        <h3 class="modal-title-site text-center" > Вход </h3>
       </div>
       <div class="modal-body">
         <div class="form-group login-username">
@@ -223,7 +223,7 @@ document.getElementById('pagestyle').setAttribute('href', sheet);
             <h5 style="padding:10px 0 10px 0;" class="text-center"> ИЛИ </h5>
             <div class="control-group"> <a class="fb_button btn  btn-block btn-lg " href="<?= $this->baseUrl()?>/s-auth/vk-link/">  VK.COM </a> </div></br>
             <div class="control-group"> <a class="fb_button btn  btn-block btn-lg " href="<?= $this->baseUrl()?>/s-auth/fb-link/">  FACEBOOK.COM </a> </div></br>
-            <div class="control-group"> <a class="fb_button btn  btn-block btn-lg " href="<?= $this->baseUrl()?>/s-auth/ok-link/">  OK.RU</a> </div></br>
+            <div class="control-group"> <a class="btn  btn-block btn-lg orange" href="<?= $this->baseUrl()?>/s-auth/ok-link/">  OK.RU</a> </div></br>
         </div>
         
         <!--userForm--> 
@@ -250,12 +250,18 @@ document.getElementById('pagestyle').setAttribute('href', sheet);
         <button type="button" class="close" data-dismiss="modal" aria-hidden="true"> &times; </button>
         <h3 class="modal-title-site text-center" > Регистрация </h3>
       </div>
+      <div class="modal-footer">
+        <p class="text-center"> Уже зарегистрированы? <a data-toggle="modal"  data-dismiss="modal" href="#ModalLogin"> Войти </a> </p>
+      </div>
       <div class="modal-body">
-          <div class="control-group"> <a class="fb_button btn  btn-block btn-lg " href="<?= $this->baseUrl()?>/s-auth/vk-link/">  VK.COM </a> </div></br>
-        <div class="control-group"> <a class="fb_button btn  btn-block btn-lg " href="<?= $this->baseUrl()?>/s-auth/fb-link/">  FACEBOOK.COM </a> </div></br>
-        <div class="control-group"> <a class="fb_button btn  btn-block btn-lg " href="<?= $this->baseUrl()?>/s-auth/ok-link/">  OK.RU</a> </div></br>
-        <h5 style="padding:10px 0 10px 0;" class="text-center"> ИЛИ </h5>
-        
+        <h5 style="padding:10px 0 10px 0;" class="text-center"> Быстрая регистрация через : </h5>
+        <div class="snBlock">
+            <div class="control-group"> <a class="fb_button btn  btn-block btn-lg " href="<?= $this->baseUrl()?>/s-auth/vk-link/">  VK.COM </a> </div></br>
+            <div class="control-group"> <a class="fb_button btn  btn-block btn-lg " href="<?= $this->baseUrl()?>/s-auth/fb-link/">  FACEBOOK.COM </a> </div></br>
+            <div class="control-group"> <a class=" btn  btn-block btn-lg orange" href="<?= $this->baseUrl()?>/s-auth/ok-link/">  OK.RU</a> </div></br>
+        </div>
+        <h5 style="padding:10px 0 10px 0;" class="text-center"> или через email  </h5>
+        <div class="snBlock">
         <div class="form-group reg-username">
           <div >
             <input name="username" id="username"  class="form-control input"  size="20" placeholder="Имя" type="text">
@@ -375,6 +381,7 @@ document.getElementById('pagestyle').setAttribute('href', sheet);
           </div>
             <p class="text-danger" id="passError" style="display: none">Пароли не совпадают</p>
         </div>
+        </div>
         
 <!--        <div class="form-group">
           <div >
@@ -387,16 +394,14 @@ document.getElementById('pagestyle').setAttribute('href', sheet);
         </div>-->
         <div >
           <div >
-            <input name="submit" id="submitReg"  class="btn  btn-block btn-lg btn-primary" value="REGISTER" type="submit">
+            <input name="submit" id="submitReg"  class="btn  btn-block btn-lg btn-primary" value="ЗАРЕГИСТРИРОВАТЬСЯ" type="submit">
             <img id="restrationPreloader" src="<?= $this->baseUrl.'/images/blue_preloader.gif' ?>" width="70" style="display: none" >
           </div>
         </div>
         <!--userForm--> 
         
       </div>
-      <div class="modal-footer">
-        <p class="text-center"> Уже зарегестрированы? <a data-toggle="modal"  data-dismiss="modal" href="#ModalLogin"> Авторизируйтесь </a> </p>
-      </div>
+
     </div>
     <!-- /.modal-content --> 
     
@@ -460,7 +465,7 @@ document.getElementById('pagestyle').setAttribute('href', sheet);
     
     <div class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
-          <li > <a href="<?= $this->baseUrl()?>/tasks/index">Задачи </a> </li>
+          <li > <a href="<?= $this->baseUrl()?>/tasks/index">Актуальные задания </a> </li>
           <li > <a href="<?= $this->baseUrl()?>/default/performers/index">Исполнители </a> </li>
 
         <!-- change width of megamenu = use class > megamenu-fullwidth, megamenu-60width, megamenu-40width -->
