--- a/application/modules/performer/views/scripts/customer/view.phtml
+++ b/application/modules/performer/views/scripts/customer/view.phtml
@@ -3,7 +3,7 @@
         <div class="breadcrumbDiv col-lg-12">
               <ul class="breadcrumb">
                   <li> <a href="<?= $this->baseUrl() ?>">Главная</a> </li>
-                 <li class="active" ><?= $this->user['username']." ".$this->user['surname']?></li>
+                 <li class="active" ><?= $this->user['username']." ".mb_substr($this->user['surname'], 0, 1, 'utf-8').'.'?></li>
               </ul>
         </div>
     </div>
@@ -28,7 +28,7 @@
     <!-- right column -->
     <div class="col-lg-6 col-md-6 col-sm-5">
     
-      <h1 class="product-title"><?= $this->user['username']?></h1>
+      <h1 class="product-title"><?= $this->user['username']." ".mb_substr($this->user['surname'], 0, 1, 'utf-8').'.'?></h1>
       <h3 class="product-code">Возраст : <?php $unixAge = time() - $this->user['birth_date'];
                 $unixYears = $unixAge/31536000;
                 $age = floor($unixYears);
@@ -83,53 +83,53 @@
     <?php if($this->customersRating){ ?>
       <div class="color-details"> <span class="selected-color"><strong>Рейтинг</strong></span>
         <ul class="swatches Color">
-          <?php switch ($this->customersRating){
-              case 1:?>
-            <li> <a style="background-color:#f1f40e"> </a> </li>
-            <li > <a style="background-color:#adadad"> </a> </li>
-            <li > <a style="background-color:#adadad"> </a> </li>
-            <li > <a style="background-color:#adadad"> </a> </li>
-            <li > <a style="background-color:#adadad"> </a> </li>
-          <?php break;
-              case 2:
-      ?>
-            <li> <a style="background-color:#f1f40e"> </a> </li>
-            <li> <a style="background-color:#f1f40e"> </a> </li>
-            <li > <a style="background-color:#adadad"> </a> </li>
-            <li > <a style="background-color:#adadad"> </a> </li>
-            <li > <a style="background-color:#adadad"> </a> </li>
-        <?php
-        break;
-        case 3: ?>  
-            <li> <a style="background-color:#f1f40e"> </a> </li>
-            <li> <a style="background-color:#f1f40e"> </a> </li>
-            <li> <a style="background-color:#f1f40e"> </a> </li>
-            <li > <a style="background-color:#adadad"> </a> </li>
-            <li > <a style="background-color:#adadad"> </a> </li>
-        <?php break;
-              case 4:
-    ?>      <li> <a style="background-color:#f1f40e"> </a> </li>
-            <li> <a style="background-color:#f1f40e"> </a> </li>
-            <li> <a style="background-color:#f1f40e"> </a> </li>
-            <li> <a style="background-color:#f1f40e"> </a> </li>
-            <li > <a style="background-color:#adadad"> </a> </li>
-          <?php break;
-              case 5:
-    ?>      <li> <a style="background-color:#f1f40e"> </a> </li>
-            <li> <a style="background-color:#f1f40e"> </a> </li>
-            <li> <a style="background-color:#f1f40e"> </a> </li>
-            <li> <a style="background-color:#f1f40e"> </a> </li>
-            <li> <a style="background-color:#f1f40e"> </a> </li>
-          <?php 
+            <?php switch ($this->customersRating){
+                case 1:?>
+              <li> <img src="<?= $this->baseUrl().'/images/pos_star.png' ?>" height="37"> </li>
+              <li > <img src="<?= $this->baseUrl().'/images/neg_star.png' ?>" height="37"> </li>
+              <li > <img src="<?= $this->baseUrl().'/images/neg_star.png' ?>" height="37"> </li>
+              <li > <img src="<?= $this->baseUrl().'/images/neg_star.png' ?>" height="37"> </li>
+              <li > <img src="<?= $this->baseUrl().'/images/neg_star.png' ?>" height="37"> </li>
+            <?php break;
+                case 2:
+        ?>
+              <li> <img src="<?= $this->baseUrl().'/images/pos_star.png' ?>" height="37"> </li>
+              <li> <img src="<?= $this->baseUrl().'/images/pos_star.png' ?>" height="37"> </li>
+              <li > <img src="<?= $this->baseUrl().'/images/neg_star.png' ?>" height="37"> </li>
+              <li > <img src="<?= $this->baseUrl().'/images/neg_star.png' ?>" height="37"> </li>
+              <li > <img src="<?= $this->baseUrl().'/images/neg_star.png' ?>" height="37"> </li>
+          <?php
           break;
-          default: ?>
-          <li > <a style="background-color:#adadad"> </a> </li>
-          <li > <a style="background-color:#adadad"> </a> </li>
-          <li > <a style="background-color:#adadad"> </a> </li>
-          <li > <a style="background-color:#adadad"> </a> </li>
-          <li > <a style="background-color:#adadad"> </a> </li>
-          <?php }?>
-        </ul>
+          case 3: ?>  
+              <li> <img src="<?= $this->baseUrl().'/images/pos_star.png' ?>" height="37"> </li>
+              <li> <img src="<?= $this->baseUrl().'/images/pos_star.png' ?>" height="37"> </li>
+              <li> <img src="<?= $this->baseUrl().'/images/pos_star.png' ?>" height="37"> </li>
+              <li > <img src="<?= $this->baseUrl().'/images/neg_star.png' ?>" height="37"> </li>
+              <li > <img src="<?= $this->baseUrl().'/images/neg_star.png' ?>" height="37"> </li>
+          <?php break;
+                case 4:
+      ?>      <li> <img src="<?= $this->baseUrl().'/images/pos_star.png' ?>" height="37"> </li>
+              <li> <img src="<?= $this->baseUrl().'/images/pos_star.png' ?>" height="37"> </li>
+              <li> <img src="<?= $this->baseUrl().'/images/pos_star.png' ?>" height="37"> </li>
+              <li> <img src="<?= $this->baseUrl().'/images/pos_star.png' ?>" height="37"> </li>
+              <li> <img src="<?= $this->baseUrl().'/images/neg_star.png' ?>" height="37"> </li>
+            <?php break;
+                case 5:
+      ?>      <li> <img src="<?= $this->baseUrl().'/images/pos_star.png' ?>" height="37"> </li>
+              <li> <img src="<?= $this->baseUrl().'/images/pos_star.png' ?>" height="37"> </li>
+              <li> <img src="<?= $this->baseUrl().'/images/pos_star.png' ?>" height="37"> </li>
+              <li> <img src="<?= $this->baseUrl().'/images/pos_star.png' ?>" height="37"> </li>
+               <li> <img src="<?= $this->baseUrl().'/images/pos_star.png' ?>" height="37"> </li>
+            <?php 
+            break;
+            default: ?>
+            <li > <img src="<?= $this->baseUrl().'/images/neg_star.png' ?>" height="37"> </li>
+            <li > <img src="<?= $this->baseUrl().'/images/neg_star.png' ?>" height="37"> </li>
+            <li > <img src="<?= $this->baseUrl().'/images/neg_star.png' ?>" height="37"> </li>
+            <li > <img src="<?= $this->baseUrl().'/images/neg_star.png' ?>" height="37"> </li>
+            <li > <img src="<?= $this->baseUrl().'/images/neg_star.png' ?>" height="37"> </li>
+            <?php }?>
+          </ul>
       </div>
       <?php } ?>
     </div><!--/ right column end -->
@@ -153,53 +153,53 @@
                         <p class="text-success">Положительный</p>
                         <span class="selected-color"><strong>Оценка</strong></span>
                         <ul class="swatches Color">
-                            <?php switch ($feedback['rating']){
-                                case 1:?>
-                              <li> <a style="background-color:#f1f40e"> </a> </li>
-                              <li > <a style="background-color:#adadad"> </a> </li>
-                              <li > <a style="background-color:#adadad"> </a> </li>
-                              <li > <a style="background-color:#adadad"> </a> </li>
-                              <li > <a style="background-color:#adadad"> </a> </li>
-                            <?php break;
-                                case 2:
-                        ?>
-                              <li> <a style="background-color:#f1f40e"> </a> </li>
-                              <li> <a style="background-color:#f1f40e"> </a> </li>
-                              <li > <a style="background-color:#adadad"> </a> </li>
-                              <li > <a style="background-color:#adadad"> </a> </li>
-                              <li > <a style="background-color:#adadad"> </a> </li>
-                          <?php
-                          break;
-                          case 3: ?>  
-                              <li> <a style="background-color:#f1f40e"> </a> </li>
-                              <li> <a style="background-color:#f1f40e"> </a> </li>
-                              <li> <a style="background-color:#f1f40e"> </a> </li>
-                              <li > <a style="background-color:#adadad"> </a> </li>
-                              <li > <a style="background-color:#adadad"> </a> </li>
-                          <?php break;
-                                case 4:
-                      ?>      <li> <a style="background-color:#f1f40e"> </a> </li>
-                              <li> <a style="background-color:#f1f40e"> </a> </li>
-                              <li> <a style="background-color:#f1f40e"> </a> </li>
-                              <li> <a style="background-color:#f1f40e"> </a> </li>
-                              <li > <a style="background-color:#adadad"> </a> </li>
-                            <?php break;
-                                case 5:
-                      ?>      <li> <a style="background-color:#f1f40e"> </a> </li>
-                              <li> <a style="background-color:#f1f40e"> </a> </li>
-                              <li> <a style="background-color:#f1f40e"> </a> </li>
-                              <li> <a style="background-color:#f1f40e"> </a> </li>
-                              <li> <a style="background-color:#f1f40e"> </a> </li>
-                            <?php 
-                            break;
-                            default: ?>
-                            <li > <a style="background-color:#adadad"> </a> </li>
-                            <li > <a style="background-color:#adadad"> </a> </li>
-                            <li > <a style="background-color:#adadad"> </a> </li>
-                            <li > <a style="background-color:#adadad"> </a> </li>
-                            <li > <a style="background-color:#adadad"> </a> </li>
-                            <?php }?>
-                                          </ul>
+                                    <?php switch ($feedback['rating']){
+                                        case 1:?>
+                                      <li> <img src="<?= $this->baseUrl().'/images/pos_star.png' ?>" height="37"> </li>
+                                      <li > <img src="<?= $this->baseUrl().'/images/neg_star.png' ?>" height="37"> </li>
+                                      <li > <img src="<?= $this->baseUrl().'/images/neg_star.png' ?>" height="37"> </li>
+                                      <li > <img src="<?= $this->baseUrl().'/images/neg_star.png' ?>" height="37"> </li>
+                                      <li > <img src="<?= $this->baseUrl().'/images/neg_star.png' ?>" height="37"> </li>
+                                    <?php break;
+                                        case 2:
+                                ?>
+                                      <li> <img src="<?= $this->baseUrl().'/images/pos_star.png' ?>" height="37"> </li>
+                                      <li> <img src="<?= $this->baseUrl().'/images/pos_star.png' ?>" height="37"> </li>
+                                      <li > <img src="<?= $this->baseUrl().'/images/neg_star.png' ?>" height="37"> </li>
+                                      <li > <img src="<?= $this->baseUrl().'/images/neg_star.png' ?>" height="37"> </li>
+                                      <li > <img src="<?= $this->baseUrl().'/images/neg_star.png' ?>" height="37"> </li>
+                                  <?php
+                                  break;
+                                  case 3: ?>  
+                                      <li> <img src="<?= $this->baseUrl().'/images/pos_star.png' ?>" height="37"> </li>
+                                      <li> <img src="<?= $this->baseUrl().'/images/pos_star.png' ?>" height="37"> </li>
+                                      <li> <img src="<?= $this->baseUrl().'/images/pos_star.png' ?>" height="37"> </li>
+                                      <li > <img src="<?= $this->baseUrl().'/images/neg_star.png' ?>" height="37"> </li>
+                                      <li > <img src="<?= $this->baseUrl().'/images/neg_star.png' ?>" height="37"> </li>
+                                  <?php break;
+                                        case 4:
+                              ?>      <li> <img src="<?= $this->baseUrl().'/images/pos_star.png' ?>" height="37"> </li>
+                                      <li> <img src="<?= $this->baseUrl().'/images/pos_star.png' ?>" height="37"> </li>
+                                      <li> <img src="<?= $this->baseUrl().'/images/pos_star.png' ?>" height="37"> </li>
+                                      <li> <img src="<?= $this->baseUrl().'/images/pos_star.png' ?>" height="37"> </li>
+                                      <li> <img src="<?= $this->baseUrl().'/images/neg_star.png' ?>" height="37"> </li>
+                                    <?php break;
+                                        case 5:
+                              ?>      <li> <img src="<?= $this->baseUrl().'/images/pos_star.png' ?>" height="37"> </li>
+                                      <li> <img src="<?= $this->baseUrl().'/images/pos_star.png' ?>" height="37"> </li>
+                                      <li> <img src="<?= $this->baseUrl().'/images/pos_star.png' ?>" height="37"> </li>
+                                      <li> <img src="<?= $this->baseUrl().'/images/pos_star.png' ?>" height="37"> </li>
+                                       <li> <img src="<?= $this->baseUrl().'/images/pos_star.png' ?>" height="37"> </li>
+                                    <?php 
+                                    break;
+                                    default: ?>
+                                    <li > <img src="<?= $this->baseUrl().'/images/neg_star.png' ?>" height="37"> </li>
+                                    <li > <img src="<?= $this->baseUrl().'/images/neg_star.png' ?>" height="37"> </li>
+                                    <li > <img src="<?= $this->baseUrl().'/images/neg_star.png' ?>" height="37"> </li>
+                                    <li > <img src="<?= $this->baseUrl().'/images/neg_star.png' ?>" height="37"> </li>
+                                    <li > <img src="<?= $this->baseUrl().'/images/neg_star.png' ?>" height="37"> </li>
+                                    <?php }?>
+                                  </ul>
                                   <?php } ?>
 
             </div>
@@ -207,7 +207,7 @@
                 <img class="img-thumbnail" width="100%" src="<?= $this->baseUrl().'/images/users_images/'.$feedback['u_image'] ?>">
             </div>
             <div class="col-lg-7"> 
-                <h2><?=  $feedback['u_username']?></h2>
+                <h2><?=  $feedback['u_username'].' '.mb_substr($feedback['u_username'], 0, 1, 'utf-8').'.'?></h2>
                     <p><?= $feedback['text'] ?></p>
                     <h3 class="product-code"><?= date("d.m.Y",$feedback['created']); ?></h3>
             </div>
