--- a/application/modules/performer/views/scripts/index/tasks.phtml
+++ b/application/modules/performer/views/scripts/index/tasks.phtml
@@ -51,55 +51,55 @@
       <div class="row  categoryProduct xsResponse clearfix">
         <?php foreach($this->tasks as $task){?>  
           <?php 
-                $taskPoints = 15*$task['customers_price'];
-                $taskPoints = $taskPoints/100;
+//                $taskPoints = 10*$task['customers_price'];
+//                $taskPoints = $taskPoints/100;
             ?>
             <div class="item col-sm-4 col-lg-4 col-md-4 col-xs-6 list-view">
               <div class="product">
 
                 <div class="image">  
-                    <?php if($this->freePoints >= $taskPoints){?>
+                    <?php //if($this->freePoints >= $taskPoints){?>
                         <a href="<?= $this->baseUrl().'/performer/task/view/id/'.$task['id'] ?>" style="max-height: 250px !important;">
                             <img src="<?= $this->baseUrl().'/images/users_images/'.$task['u_image'] ?>" alt="img" class="img-responsive">
                         </a>
-                    <?php }else{?>  
-                        <a data-toggle="modal" data-target="#notallowedModal" style="max-height: 250px !important;">
-                            <img src="<?= $this->baseUrl().'/images/users_images/'.$task['u_image'] ?>" alt="img" class="img-responsive">
-                        </a>
-                    <?php } ?> 
+                    <?php //}else{?>  
+<!--                        <a data-toggle="modal" data-target="#notallowedModal" style="max-height: 250px !important;">
+                            <img src="<? $this->baseUrl().'/images/users_images/'.$task['u_image'] ?>" alt="img" class="img-responsive">
+                        </a>-->
+                    <?php //} ?> 
                 </div>
                 <div class="description">
                   <h4>
-                      <?php if($this->freePoints >= $taskPoints){?>
+                      <?php //if($this->freePoints >= $taskPoints){?>
                         <a href="<?= $this->baseUrl().'/performer/task/view/id/'.$task['id'] ?>">
                             <?= $task['title'] ?>
                         </a>
-                      <?php }else{?>    
-                        <a data-toggle="modal" data-target="#notallowedModal"></a> 
-                      <?php } ?> 
+                      <?php //}else{?>    
+<!--                        <a data-toggle="modal" data-target="#notallowedModal"></a> -->
+                      <?php //} ?> 
                   </h4>
                     <small>Дата исполнения: <?= date("h:00 d.m.y",$task['final_date']) ?></small></br>
-                    <small>Предложение действительно до: <?= date("h:00 d.m.y",$task['expiry_date']) ?></small>
+                   
                   <h3><?= $task['u_username'].' '.mb_substr($task['u_surname'],0,1,'utf-8').'.' ?></h3>
                     <div class="grid-description">
                         <p><?= $task['description'] ?></p>
                     </div>
-                  <span ><?= $task['customers_price'] ?> руб</span> </div>
+                  <span ><?= $task['customers_price'] ?> бел. рублей</span> </div>
 <!--                <div class="price"> <span><? $this->task['customers_price'] ?> </span>руб </div>-->
                 <div class="action-control"> 
-                    <?php if($this->freePoints >= $taskPoints){?>
+                    <?php //if($this->freePoints >= $taskPoints){?>
                         <a class="btn btn-primary" href="<?= $this->baseUrl().'/performer/task/view/id/'.$task['id'] ?>"> 
                             <span class="add2cart">
                                 Подробнее
                             </span> 
                         </a> 
-                    <?php }else{?>    
-                        <a class="btn btn-primary" data-toggle="modal" data-target="#notallowedModal"> 
+                    <?php //}else{?>    
+<!--                        <a class="btn btn-primary" data-toggle="modal" data-target="#notallowedModal"> 
                             <span class="add2cart">
                                 Подробнее
                             </span> 
-                        </a> 
-                    <?php } ?> 
+                        </a> -->
+                    <?php //} ?> 
                 </div>
               </div>
             </div>
