--- a/application/modules/performer/views/scripts/task/add.phtml
+++ b/application/modules/performer/views/scripts/task/add.phtml
@@ -11,6 +11,7 @@
         </div>
         <div class="col-lg-12">
             <form method="POST" id="task_form" class="form-inline" enctype="multipart/form-data" action="<?= $this->baseUrl() ?>/performer/task/create-task/">
+                <div class="row">
                 <div class="col-sm-4">
                     <label  for="cat">Категория</label>
                     <select class="form-control" onchange="getSubCats()" id="cat" style="width: 100%">
@@ -35,22 +36,26 @@
                     <input name="title" type="text" id="title" class="form-control" style="width: 100%">
                     <p id="title_error" class="text-danger" style="display: none">* Поле не может быть пустым</p>
                 </div>
+                </div>
+                <div class="row">
                 <div class="col-sm-12">
                     <label>Описание</label>
                     <textarea name="description" id="description" style="width: 100%" rows="10" class="form-control"></textarea>
                 </div>
-                <div class="">
+                </div>
+                <div class="row">
                 <div class="col-sm-4">
                     <label>Стоимость</label>
                     <input type="text" name="price" id="price" class="form-control" style="width: 100%">
                     <p id="price_error" class="text-danger" style="display: none">* Проверьте вводимые данные</p>
+                    <p id="price_char_error" class="text-danger" style="display: none">* Поле не должно содержать пробелов, точек и запятых</p>
                 </div>
-                <div class="col-sm-2">
+                <div class="col-sm-4">
                     <label>Дата выполнения</label>
                     <input type="text" name="final_date" id="final_date" class="form-control" style="width: 100%">
                     <p id="final_date_error" class="text-danger" style="display: none">* Поле не может быть пустым</p>
                 </div>
-                <div class="col-sm-2">
+                <div class="col-sm-4">
                     <label>Время выполнения</label>
                         
                         <select  id="timepicker" name="time" class="form-control" style="width: 100%">
@@ -81,59 +86,28 @@
                         
                         </select>
                 </div> 
-                <div class="col-sm-2">
-                    <label>Дата окончания предложения</label>
-                    <input type="text" name="expiry_date" id="expiry_date" class="form-control" style="width: 100%">
-                    <p id="expiry_date_error" class="text-danger" style="display: none">* Поле не может быть пустым</p>
+                 
                 </div>
-                    <div class="col-sm-2">
-                    <label>Время окончания предолжения</label>
-                        
-                        <select  id="timepicker" name="expiry_time" class="form-control" style="width: 100%">
-                            <option value="0">00:00</option>
-                            <option value="1">01:00</option>
-                            <option value="2">02:00</option>
-                            <option value="3">03:00</option>
-                            <option value="4">04:00</option>
-                            <option value="5">05:00</option>
-                            <option value="6">06:00</option>
-                            <option value="7">07:00</option>
-                            <option value="8">08:00</option>
-                            <option value="9">09:00</option>
-                            <option value="10">10:00</option>
-                            <option value="11">11:00</option>
-                            <option value="12">12:00</option>
-                            <option value="13">13:00</option>
-                            <option value="14">14:00</option>
-                            <option value="15">15:00</option>
-                            <option value="16">16:00</option>
-                            <option value="17">17:00</option>
-                            <option value="18">18:00</option>
-                            <option value="19">19:00</option>
-                            <option value="20">20:00</option>
-                            <option value="21">21:00</option>
-                            <option value="22">22:00</option>
-                            <option value="23">23:00</option>
-                        
-                        </select>
-                </div> 
-                    </div>
-                <div class="col-sm-4">
+                <div class="row">
+                <div class="col-sm-8 bg-info additionalBlockTask"> 
+                    <label class="col-sm-12" style="text-align: center; text-decoration: underline">Дополнительная информация</label>
+                <div class="col-sm-6">
                     <div id="mainImgDiv">
                     <label>Изображение</label>
-                    <input type="file" name="image" class="form-control" style="width: 100%">
+                    <input type="file" name="image" class="form-control45" style="width: 100%">
                     </div>
                     
-                    <a onclick="addInput()">+ Добавить изображение</a>
+<!--                    <a onclick="addInput()">+ Добавить изображение</a>-->
                 </div>
                 <input type="hidden" value="0" name="docs" style="display: none">
-                <div class="col-sm-4">
-                    <label>Наличие документов</label></br>
+                <div class="col-sm-6">
+                    <label >Наличие документов</label></br>
                     
                         <span>
-                        <input type="checkbox" name="docs" value="1" id="docs" class="form-control" >
+                        <input type="checkbox" name="docs" value="1" id="docs" class="form-control45" >
                         Исполнитель должен иметь при себе документы для оформления расписки</span>
                     
+                </div>
                 </div>
                 <input type="hidden" name="agree"  value="0">
                 <div class="col-sm-4">
@@ -146,6 +120,7 @@
                          
                     </span>
                    <p id="agree_error" class="text-danger" style="display: none">* Согласитесь с условиями</p>
+                </div>
                 </div>
                 <div class="col-sm-12" id="agreementDiv" style="display: none">
                    <div class="panel panel-default ">
@@ -423,6 +398,7 @@ function newTask(){
     $('#date_error').hide();
     $('#finish_date_error').hide(); 
     $('#agree_error').hide(); 
+    $('#price_char_error').hide(); 
     
     var catId = $('#sub_cat :selected').val();
     var title = $('#title').val();
@@ -438,7 +414,8 @@ function newTask(){
     }
 
  var priceNan = isNaN(price);
- if(catId === '0' || title === '' || price === '' || date === '' || finishDate === '' || description === '' || agree === '0' || priceNan){
+ var priceDot = price.indexOf(".");
+ if(catId === '0' || title === '' || price === '' || date === '' || finishDate === '' || description === '' || agree === '0' || priceNan || priceDot != -1){
 
 //    if( title === '' || price === '' || date === '' || finishDate === '' || agree === '0'){
         if(catId === '0'){
@@ -446,6 +423,9 @@ function newTask(){
         }
         if(title === ''){
            $('#title_error').show(); 
+        }
+        if(priceDot != -1){
+           $('#price_char_error').show(); 
         }
         if(price === ''){
            $('#price_error').show(); 
